--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "biddin_pal_frontend",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://marcinrubin.github.io/bidding_pal_frontend/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -32,6 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "vite": "^5.1.2"
   }
 }
