Setting allowing to deploy fixed

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "biddin_pal_frontend",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://marcinrubin.github.io/bidding_pal_frontend/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
